# thermalprinter-ble

./: .gitignore  CONTRIBUTING.md  DEPENDENCIES.md  LIBRARY_SUMMARY.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/: basic_print.py  discover_printers.py  image_print.py  label_print.py
reference/: AndroidManifest.xml  BLE_WRITE_ANALYSIS.md  BLUETOOTH_PROTOCOL.md  CLAUDE.md  apktool.yml
reference/smali/device/: BatteryLoader$1.smali  DeviceInfoActivity.smali  DeviceListActivity.smali  PrinterCategoryActivity.smali  a.smali  b.smali  c.smali  d.smali  e.smali  f.smali  g.smali  h.smali  i.smali  j.smali  k.smali  l.smali  m.smali  n.smali  o.smali  p.smali  q.smali  r.smali  s.smali  t.smali  u.smali  v.smali  w.smali
reference/smali/l3/: a.smali  b.smali  c.smali  d.smali  e.smali  f.smali
reference/smali/print/: PrintActivity$1.smali  PrintActivity$2.smali  PrintActivity$3.smali  PrintActivity$4.smali  PrintActivity$5$1.smali  PrintActivity$5$2.smali  PrintActivity$5.smali  PrintActivity$6.smali  PrintActivity$PrintIndexData.smali  PrintActivity$RecordEventModule$1.smali  PrintActivity$RecordEventModule.smali  PrintActivity.smali  PrintContinuousLabelActivity$1.smali  PrintContinuousLabelActivity$2.smali  PrintContinuousLabelActivity$3.smali  PrintContinuousLabelActivity$4$1.smali  PrintContinuousLabelActivity$4.smali  PrintContinuousLabelActivity$RecordEventModule$1.smali  PrintContinuousLabelActivity$RecordEventModule.smali  PrintContinuousLabelActivity.smali  PrintLabelActivity$1.smali  PrintLabelActivity$2.smali  PrintLabelActivity$3.smali  PrintLabelActivity$4$1.smali  PrintLabelActivity$4$2.smali  PrintLabelActivity$4.smali  PrintLabelActivity$RecordEventModule$1.smali  PrintLabelActivity$RecordEventModule.smali  PrintLabelActivity.smali  PrintOverheatChecker$1.smali  PrintOverheatChecker$2.smali  PrintOverheatChecker$Callback.smali  (+34 more)
src/thermalprinter_ble/: __init__.py  device.py  exceptions.py  image_utils.py  models.py  printer.py
thermalprinter_ble/: __init__.py
(+115 files in other folders)
